--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,12 +22,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
+          cache: "pnpm"
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: latest
+        env:
+          PNPM_HOME: ~/.pnpm
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
