--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.9.0",
+  "packageManager": "pnpm@10.12.4",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "dotenv": "^17.0.1",
     "express": "^5.1.0",
-    "mongodb": "^6.17.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.1"
   },
   "devDependencies": {
     "debug": "^4.4.1",
